k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels: # match a label on some other object inside our cluster
      component: worker
  template: # pod template
    metadata:
      labels: # apply a label to every pod that gets created
        component: worker
    spec: # configure a spec to specify what exactly this pod is running
      containers:
        - name: worker
          image: danwithaplan112/multi-worker
          #imagePullPolicy: Never
