k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec: # this is where we configure the way the service behaves
    type: ClusterIP
    selector: # we need a selector to know what set of pods we are providing access to
        component: web
    ports:
        - port: 3000 # note: doesn't necessarily have to be 3000, this is exposed for other objects within the cluster to access
          targetPort: 3000 # this maps to the actual container
