k8s/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: postgres-cluster-ip-service
spec:
    type: ClusterIP
    selector: # provide the name of the pods that this service should look for or map to
        component: postgres
    ports:
        - port: 5432
          targetPort: 5432
