k8s/redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: redis-cluster-ip-service
spec:
    type: ClusterIP
    selector: # provide the selector so this service knows what set of pods it is providing access to
        component: redis
    ports:
        - port: 6379
          targetPort: 6379
