k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1 # extensions/v1beta1 # networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # configuration rules here
    kubernetes.io/ingress.class: nginx # this tells kubernetes that we want to create an ingress controller based on the 'k8s nginx ingress project'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # configures how our copy of nginx behaves (in this case, it will rewrite the inbound path to just / . for example - if inbound path is /api, then nginx will rewrite it to just /)
    # certmanager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec: 
  # tls:
  #   - hosts:
  #       - leinadmahpel.org
  #       - www.leinadmahpel.org
  #     secretName: leinadmahpel-secret # as defined in the certificate.yml
  rules:
    - host: leinadmahpel.org
      http:
        paths:
          - path: /?(.*)
            defaultBackend:
              service.name: client-cluster-ip-service
              service.port.number: 3000
          - path: /api/?(.*)
            defaultBackend:
              service.name: server-cluster-ip-service
              service.port.number: 5000
    - host: www.leinadmahpel.org
      http:
        paths:
          - path: /?(.*)
            defaultBackend:
              service.name: client-cluster-ip-service
              service.port.number: 3000
          - path: /api/?(.*)
            defaultBackend:
              service.name: server-cluster-ip-service
              service.port.number: 5000
